[project]
name = "practical01"
version = "0.1.0"
description = ""
authors = [
    {name = "AmyLIU33",email = "emilyliu2023@163.com"}
]
readme = "README.md"
requires-python = "^3.8"
dependencies = [
    "flask (>=2.0,<3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
